2009-01-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* bits/resource.h (PRIO_PROCESS, PRIO_PGRP, PRIO_USER): Add macros.

2009-01-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h: Describe 6th argument
	handling.

2009-01-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_FUTEX_CLOCK_REALTIME): Define.

	* wcsmbs/wcsnrtombs.c (__wcsnrtombs): Create temporary state object
	if no output is written.

	* version.h: Bump to 2.10 development.

	* posix/getconf.c: Update copyright year.
	* nss/getent.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* iconv/iconv_prog.c: Likewise.
	* elf/ldconfig.c: Likewise.
	* catgets/gencat.c: Likewise.
	* csu/version.c: Likewise.
	* elf/ldd.bash.in: Likewise.
	* elf/sprof.c (print_version): Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.c: Likewise.
	* nscd/nscd.c (print_version): Likewise.
	* debug/xtrace.sh: Likewise.
	* malloc/memusage.sh: Likewise.
	* malloc/mtrace.pl: Likewise.
	* debug/catchsegv.sh: Likewise.

2008-12-29  Mike Frysinger  <vapier@gentoo.org>

	* iconvdata/Makefile (iconv-rules): Use LC_ALL=C when running awk
	script.

2008-12-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): When the
	gethostbyname4_r function call succeeded, just leave the loop.

	[BZ #9694]
	* wcsmbs/wchar.h: Move undefs for local __need_* constants to the
	very end.
	* wctype/wctype.h: Get wint_t definition directly from <stddef.h>.
	* wctype/Makefile (tests): Add bug-wctypeh.
	* wctype/bug-wctypeh.c: New file.

	* nscd/nscd_gethst_r.c (nscd_gethst_r): Don't use nscd if
	LOCALDOMAIN is defined.
	* nscd/nscd_getai.c (__nscd_getai): Likewise.

	* sysdeps/x86_64/bits/select.h: New file.

	* resolv/res_init.c (__res_vinit): Count all servers in	statp->nscount.

2008-12-21  Bruno Haible  <bruno@clisp.org>

	[BZ #9677]
	* wcsmbs/mbsnrtowcs.c (__mbsnrtowcs): Create temporary state object