@@ -1,5 +1,5 @@
 /* Report on what a thread in our task is waiting for.
-   Copyright (C) 1996,1997,1999,2002,2005 Free Software Foundation, Inc.
+   Copyright (C) 1996,1997,1999,2002,2005,2009 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -30,7 +30,7 @@ static char *
 describe_number (string_t description, const char *flavor, long int i)
 {
   unsigned long int j;
-  char *p = flavor ? description : __stpcpy (description, flavor);
+  char *p = flavor == NULL ? description : __stpcpy (description, flavor);
   char *end;
 
   /* Handle sign.  */
